--- a/hello-eureka-server/pom.xml
+++ b/hello-eureka-server/pom.xml
@@ -9,7 +9,7 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.lee.springcloud</groupId>
-    <artifactId>eureka-server</artifactId>
+    <artifactId>hello-eureka-server</artifactId>
     <version>1.0.0-SNAPSHOT</version>
     <name>hello-eureka-server</name>
 
