--- a/hello-springcloud-dependencies/pom.xml
+++ b/hello-springcloud-dependencies/pom.xml
@@ -7,6 +7,9 @@
     <groupId>com.lee.springcloud</groupId>
     <artifactId>hello-springcloud-dependencies</artifactId>
     <version>1.0.0-SNAPSHOT</version>
+    <modules>
+        <module>../hello-springboot-actuator</module>
+    </modules>
     <packaging>pom</packaging>
 
     <parent>
