--- a/hello-hystrix-dashboard-turbine/pom.xml
+++ b/hello-hystrix-dashboard-turbine/pom.xml
@@ -2,19 +2,19 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <parent>
-        <artifactId>hello-springcloud-dependencies</artifactId>
-        <groupId>com.lee.springcloud</groupId>
-        <version>1.0.0-SNAPSHOT</version>
-        <relativePath>../hello-springcloud-dependencies/pom.xml</relativePath>
-    </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>hello-eureka-client-service-consumer-ribbon-hystrix</artifactId>
+    <groupId>org.example</groupId>
+    <artifactId>hello-hystrix-dashboard-turbine</artifactId>
+    <version>1.0-SNAPSHOT</version>
 
-
+    <parent>
+        <groupId>com.lee.springcloud</groupId>
+        <artifactId>hello-springcloud-dependencies</artifactId>
+        <version>1.0.0-SNAPSHOT</version>
+    </parent>
+    
     <dependencies>
-        <!--服务发现使用的是ribbon,它被封装到了这个dependency当中-->
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-netflix-eureka-server</artifactId>
@@ -31,18 +31,15 @@
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
 
-        <!--熔断器需要的模块-->
-        <!--注意:需要加入actuator相关的依赖-->
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-netflix-hystrix</artifactId>
         </dependency>
 
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-actuator</artifactId>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-netflix-turbine</artifactId>
         </dependency>
     </dependencies>
-
 
 </project>
